snapshots/mcutt__v3__packets__publish__comp__tests__pubcomp_roundtrip.snap
---
source: src/v3/packets/publish/comp.rs
expression: Hexdump(buf)
---
Length: 4 (0x4) bytes
0000: | 0111 0000 | (70) 'p'
0001: | 0000 0010 | (02) '.'
0002: | 0000 0000 | (00) '.'
0003: | 0000 1010 | (0a) '.'
